add args in jar runner