@@ -15,7 +15,14 @@ import java.util.List;
 public class JarRunner {
 
     private String javaCommand;
+    private String[] args = new String[0];
 
+    /**
+     *
+     * @param runner Write your main class and your class path
+     * @return the process who be launch
+     * @throws JarRunnerException if the process can be started
+     */
     public Process launch(final Runner runner) throws JarRunnerException {
 
         final ProcessBuilder processBuilder = new ProcessBuilder();
@@ -27,7 +34,7 @@ public class JarRunner {
         commands.add("-cp");
         commands.add(runner.getClassPath());
         commands.add(runner.getMainClass());
-
+        commands.addAll(Arrays.asList(this.getArgs()));
         processBuilder.command(commands);
 
         final StringBuilder entireCommand = new StringBuilder();
@@ -43,10 +50,18 @@ public class JarRunner {
         }
     }
 
+    /**
+     *
+     * @param javaCommand java path
+     */
     public void setJavaCommand(final String javaCommand) {
         this.javaCommand = javaCommand;
     }
 
+    /**
+     *
+     * @return java path
+     */
     private String getJavaCommand() {
         if (this.javaCommand == null) {
             File java;
@@ -60,8 +75,21 @@ public class JarRunner {
             return this.javaCommand;
         }
     }
+
+    /**
+     *
+     * @return -XX:-UseAdaptiveSizePolicy: asking the JVM to adjust the heap size dynamically at runtime<br>
+     * -XX:+UseConcMarkSweepGC: see more here https://docs.oracle.com/javase/8/docs/technotes/guides/vm/gctuning/cms.html
+     */
     private String[] getSpecialArgs() {
         return new String[]{"-XX:-UseAdaptiveSizePolicy", "-XX:+UseConcMarkSweepGC"};
     }
 
+    public void setArgs(final String[] args) {
+        this.args = args;
+    }
+
+    public String[] getArgs() {
+        return this.args;
+    }
 }
